2016-09-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_target): Remove code that 
	altered the line number of an index entry if 
	preprocess_nodes_p=1, because this is is independent of whether 
	the first line of the node is displayed or not.

2016-09-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* po/el.po: Commit file.
	* po/LINGUAS: List el.

2016-09-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* po_document/LINGUAS: List ca, de, el, hr, pt, pt_BR.

2016-08-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph: Run gnulib-tool --add-import.
	* (top-level): Run gnulib-tool --add-import.

2016-08-28  Emanuele Giaquinta  <emanuele.giaquinta@gmail.com>  (tiny change)

	* util/texi2dvi (cleanup): Fix cleanup for "clean" build mode.  
	Bug introduced on 2016-05-03.

2016-08-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\entry): Disable output of marks for whole 
	entry, instead of just for the page number.  This is intended to 
	prevent an infinite loop in \ourunvbox when @uref is used in an 
	index entry (reported by Karl Berry for latex refman manual).

2016-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: Mention gnulib import in XSParagraph subdirectory.

2016-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.1.90

2016-08-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo-tex-test.texi (Document encoding): Test glyph 
	commands in section title.

2016-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\indexnofonts): Eat the {} following glyph 
	commands, and add definitions for \atchar, \lbracechar and 
	\rbracechar.
	(\definedummies): Add dummy for @atchar.
	* doc/texinfo-tex-test.texi (Document encoding): Test some glyph 
	commands in section title.

2016-08-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\balancecolumns): When making bottoms of the 