@@ -1,5 +1,10 @@
 2016-09-03  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/window.c (window_make_modeline): Do not make modeline 
+	depend on whether preprocess_nodes_p is set.
+
+2016-09-03  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/info-utils.c (scan_reference_target): Remove code that 
 	altered the line number of an index entry if 
 	preprocess_nodes_p=1, because this is is independent of whether 
